--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -5,25 +5,21 @@
 \newcommand{\matriculationNumber}{01607307}
 \newcommand{\thesiskeywords}{3DSlicer, micro-CT, Segmentation}
 \newcommand{\advisor}{Dipl.-Ing. Michael Rauter}
-\newcommand{\study}{Master's Programme}
-%%\newcommand{\institutename}{Medicine}
+\newcommand{\study}{Master's Program}
+\newcommand{\masterdescription}{Functional Imaging, Conventional and Ion\\\tabto{7cm}Radiotherapy}
 \newcommand{\studyprogram}{MedTech}
 \newcommand{\place}{Wiener Neustadt}
 \newcommand{\thesissubject}{Master's Thesis}
 \newcommand{\thesisdate}{\today}
 \renewcommand{\contentsname}{Table of Contents}
 
+\newcommand{\mct}{micro-CT}
+\newcommand{\diatx}{Di\'{a}taxis}
 
- \newcommand{\hyundai}{Hyundai Motor Company}
- \newcommand{\ford}{Ford Motor Company}
- \newcommand{\gm}{General Motors Company}
- \newcommand{\toyota}{Toyota Motor Corporation}
- \newcommand{\vw}{Volkswagen AG}
-
- \newcommand{\tb}{TextBlob}
- \newcommand{\nb}{\ac{NB}}
- \newcommand{\me}{\ac{ME}}
- \newcommand{\svm}{\ac{SVM}}
+\newcommand{\tb}{TextBlob}
+\newcommand{\nb}{\ac{NB}}
+\newcommand{\me}{\ac{ME}}
+\newcommand{\svm}{\ac{SVM}}
 
 \newcommand{\ftb}{$S_{TB}$}
 \newcommand{\fnb}{$S_{NB}$}
