--- a/includes/thesis/part01-page2-declaration.tex
+++ b/includes/thesis/part01-page2-declaration.tex
@@ -9,20 +9,21 @@
 \vspace{30pt}
 
 \begin{sffamily}
-\noindent
-I hereby affirm that this research work was written solely by me and that I have not previously submitted this work at another educational institution for the purpose of receiving an academic degree. In particular, contributions by other persons in this work have been appropriately cited and the data gathered through the methods described have been accurately reproduced.
-\\
+	\noindent
+	I hereby affirm that this research work was written solely by me and that I have not previously submitted this work at another educational institution for the purpose of receiving an academic degree. In particular, contributions by other persons in this work have been appropriately cited and the data gathered through the methods described have been accurately reproduced.
+	\\
 
-\noindent
-Ich erkläre an Eides statt, dass diese Arbeit ausschließlich von mir selbst verfasst wurde und ich diese Arbeit nicht zuvor an einer anderen Bildungseinrichtung zum Zwecke der Erlangung eines akademischen Grades vorgelegt habe. Insbesondere wurden Beiträge anderer Personen entsprechend kenntlich gemacht sowie die in dieser Arbeit verwendeten Daten entsprechend der dargestellten Verfahren gewonnen und richtig wiedergegeben.
+	\noindent
+	Ich erkläre an Eides statt, dass diese Arbeit ausschließlich von mir selbst verfasst wurde und ich diese Arbeit nicht zuvor an einer anderen Bildungseinrichtung zum Zwecke der Erlangung eines akademischen Grades vorgelegt habe. Insbesondere wurden Beiträge anderer Personen entsprechend kenntlich gemacht sowie die in dieser Arbeit verwendeten Daten entsprechend der dargestellten Verfahren gewonnen und richtig wiedergegeben.
 
-\vspace{130pt}
+	\vspace{130pt}
 
-\begin{center}
-	\begin{tabular}{p{3.8cm} >{\centering}p{3cm} p{.9cm} >{\centering}p{6cm}}
-		\place, & \thesisdate & \hspace{0.1cm}             \\ \cline{2-2} \cline{4-4}
-		        & Date        &                & Signature \\
-	\end{tabular}
-\end{center}
+	\begin{center}
+		\begin{tabular}{p{3.8cm} >{\centering}p{3cm} p{.9cm} >{\centering}p{6cm}}
+			\place, & \thesisdate & \hspace{0.1cm}             %\includegraphics[scale=0.2]{images/unterschrift.png}
+			\\ \cline{2-2} \cline{4-4}
+			        & Date        &                & Signature \\
+		\end{tabular}
+	\end{center}
 \end{sffamily}
 \clearpage
