--- a/includes/thesis/part01-page3-abstract.tex
+++ b/includes/thesis/part01-page3-abstract.tex
@@ -18,7 +18,7 @@
 \AbstractHead{Keywords}
 \normalsize
 \noindent
-MicroCT, segmentation, guide, 3D Slicer
+\mct, segmentation, guide, 3D Slicer
 
 \glsresetall{}
 \SomeSpace
@@ -32,6 +32,6 @@ MicroCT, segmentation, guide, 3D Slicer
 \AbstractHead{Keywords}
 \normalsize
 \noindent
-MicroCT, Segmentierung, Anleitung, 3D Slicer
+\mct, Segmentierung, Anleitung, 3D Slicer
 
 \glsresetall{}
