--- a/includes/thesis/part02-chapter05-conclusion.tex
+++ b/includes/thesis/part02-chapter05-conclusion.tex
@@ -19,8 +19,8 @@
 
 % research goals
 
-\subsection{G1 - Determine Companies, Keywords and Stock Symbols to Analyze}
-\label{ss:conclusion-summary-g1}
+%\subsection{G1 - Determine Companies, Keywords and Stock Symbols to Analyze}
+%\label{ss:conclusion-summary-g1}
 
 % \item \textbf{G1-Q1} - Which companies should be analyzed?
 % \item \textbf{G1-Q2} - Which keywords should be used to find corresponding tweets?
@@ -41,8 +41,8 @@
 % Thirdly, the companies must be traded on any stock exchange market and the stock symbols and the market have to be researched in order to retrieve their stock prices.
 % The results of this research are depicted in \cref{tab:casestudy-companies-counts-and-symbols}.
 
-\subsection{G2 - Gather Tweets and their Sentiments and Stock Prices}
-\label{ss:conclusion-summary-g2}
+%\subsection{G2 - Gather Tweets and their Sentiments and Stock Prices}
+%\label{ss:conclusion-summary-g2}
 
 % \item \textbf{G2-Q4} - Why Twitter and not anything else? (2.3)
 % \item \textbf{G2-Q5} - In which way tweets can be collected?
@@ -93,8 +93,8 @@
 % The \tb{} classifier for example is very optimistic whereas the \nb{} classifier is relatively pessimistic.
 % The same holds true for certain companies: \SI{80}{\percent} of all \gm{} tweets were positive whereas only $\frac{2}{3}$ of \vw{} tweets were positive.
 
-\subsection{G3 - Comparing Sentiment Time Series with Share Prices}
-\label{ss:conclusion-summary-g3}
+%\subsection{G3 - Comparing Sentiment Time Series with Share Prices}
+%\label{ss:conclusion-summary-g3}
 
 % \item \textbf{G3-Q8} - Can the time series of sentiments explain the share prices?
 
