--- a/includes/thesis/part03-page3-listoftables.tex
+++ b/includes/thesis/part03-page3-listoftables.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../../thesis.tex
 
-% \listoftables   %\thispagestyle{fancy}
-% \addcontentsline{toc}{chapter}{List of Tables}
-% \cleardoublepage
+\listoftables   %\thispagestyle{fancy}
+\addcontentsline{toc}{chapter}{List of Tables}
+\cleardoublepage
