--- a/includes/thesis/part01-page5-listofacronyms.tex
+++ b/includes/thesis/part01-page5-listofacronyms.tex
@@ -1,4 +1,14 @@
 %!TEX root = ../../thesis.tex
 
-\printglossary[type=\acronymtype,title=List of Acronyms,style=long]
+% see list of possible styles: https://www.dickimaw-books.com/gallery/glossaries-styles
+\printglossary[
+%type=\acronymtype,     % print only acronyms
+title=List of Acronyms, % change title
+nogroupskip=true,       % don't insert space between groups
+nonumberlist,           % don't show page numbers
+style=super             % use style preset
+%style=listgroup         % use style preset
+]
+\glsaddall              % print all entries regardless if used
+\newpage
 \cleardoublepage
